# conan-sample-project

./: readme.md  run.py
SampleProject/: CMakeLists.txt  cmake.txt  conanfile.txt  main.c
SampleProject/Generated_Source/PSoC4/: CMakeLists.txt  Cm0RealView.scat  LED_1.c  LED_1.h  LED_1_aliases.h  cm0gcc.ld  cydevice_trm.h  cydevicegnu_trm.inc  cydeviceiar_trm.inc  cydevicerv_trm.inc  cyfitter.h  cyfitter_cfg.c  cyfittergnu.inc  cyfitteriar.inc  cyfitterrv.inc  cymetadata.c  cytypes.h  project.h
conanfiles/arm-gcc/: conanfile.py
conanfiles/arm-gcc/test_package/: conanfile.py
conanfiles/mingw-make/: conanfile.py
conanfiles/mingw-make/test_package/: conanfile.py
module/: conanfile.py
module/src/: CMakeLists.txt  module.c  module.h
module/test_package/: main.c
